# heart-net

./: .gitignore  LICENSE  Makefile  README.md  deployment_and_reat-time_inference.py  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
media/: detected_video.avi
notebooks/: frame_extractor.ipynb
src/common/: constants.py  file_downloader.py  image_util.py  joints.py
src/data/: data_collector.py  data_loaders.py  data_parsers.py  dataset.py  frame_extractor.py  make_dataset.py
src/models/: model.py  train_model.py  training_utils.py
src/visualization/: confusion_matrix.py  visualize.py
