[project]
name = "heart-net"
version = "0.1.0"
description = ""
authors = [
    {name = "Tanmay Kacker", email = "tanmaykacker40@gmail.com"},
]
dependencies = [
    "requests>=2.27.1",
    "tqdm>=4.62.3",
    "opencv-python>=4.5.5.62",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
